setup h2, entities, repos, working movies controller and service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=sky-movies-api
+spring.datasource.url=jdbc:h2:file:./src/main/resources/static/db
+spring.jpa.generate-ddl=true
+
+# Logging configuration
+logging.level.root=INFO
+logging.level.rustam.fadeev.sky_movies_api=DEBUG
+logging.level.org.springframework.web=INFO
