add user endpoints, services. Add security (disabled)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.generate-ddl=true
 logging.level.root=INFO
 logging.level.rustam.fadeev.sky_movies_api=DEBUG
 logging.level.org.springframework.web=INFO
+
+# Spring security
+spring.security.user.name=admin
+spring.security.user.password=password
