--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ logging.level.root=INFO
 logging.level.rustam.fadeev.sky_movies_api=DEBUG
 logging.level.org.springframework.web=INFO
 
-# Spring security
-spring.security.user.name=admin
-spring.security.user.password=password
+# Security - preset admin
+app.admin.username=admin
+app.admin.email=admin@app.com
+app.admin.password=admin123
